// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders correctly when finished loading 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root Item-card-1 test card className MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <p
      className="MuiTypography-root MuiTypography-h6 MuiTypography-paragraph"
    >
      TestTitle
    </p>
    <img
      className="MuiCardMedia-root Item-media-2 test media className MuiCardMedia-media MuiCardMedia-img"
      src="TestImageUrl"
      title="Test alt"
    />
    <Buttons
      onChange={[MockFunction]}
      reaction=""
    />
  </div>
</div>
`;

exports[`Item renders correctly when loading 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root Item-card-1 test card className MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <Loader />
  </div>
</div>
`;

exports[`Item renders correctly when marked funny 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root Item-card-1 test card className MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <p
      className="MuiTypography-root MuiTypography-h6 MuiTypography-paragraph"
    >
      TestTitle
    </p>
    <img
      className="MuiCardMedia-root Item-media-2 test media className MuiCardMedia-media MuiCardMedia-img"
      src="TestImageUrl"
      title="Test alt"
    />
    <Buttons
      onChange={[MockFunction]}
      reaction="funny"
    />
  </div>
</div>
`;

exports[`Item renders correctly when marked not funny 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root Item-card-1 test card className MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <p
      className="MuiTypography-root MuiTypography-h6 MuiTypography-paragraph"
    >
      TestTitle
    </p>
    <img
      className="MuiCardMedia-root Item-media-2 test media className MuiCardMedia-media MuiCardMedia-img"
      src="TestImageUrl"
      title="Test alt"
    />
    <Buttons
      onChange={[MockFunction]}
      reaction="meh"
    />
  </div>
</div>
`;
